[package]
name = "wavedash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    ".",
    "example",
    "example/client",
    "example/core",
    "crates/core",
    "crates/host",
    "crates/macros"
]

[dependencies]
bevy_ecs = "0.14.2"
bevy_reflect = { version = "0.14.2", no-default-features = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wavedash-core = { path = "crates/core" }
wavedash-macros = { path = "crates/macros" }
