[package]
name = "wavedash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    ".",
    "example",
    "example/client",
    "example/core",
    "crates/host",
    "crates/macros"
]

[dependencies]
bevy_ecs = { version = "0.17.3", default-features = false }
bevy_reflect = { version = "0.17.3", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wavedash-macros = { path = "crates/macros" }
